# tauri-plugin-serialport

./: Cargo.toml
src/: command.rs
